Fix incorrect status codes present in endpoints
